--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Multi-step Form - FrontendPro Challenge</title>
   </head>
   <body>
@@ -286,6 +286,6 @@
         </div>
       </form>
     </div>
-    <script src="/src/script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
